Closed Bug 944088 Opened 11 years ago Closed 11 years ago

MP4Reader::Init() should assume mLayersBackendType=LAYERS_NONE if it doesn't have a decoder owner

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: cpearce, Assigned: cpearce)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

[09:42] yury cpearce: I'm trying to run fmp4/mse playback locally [09:42] yury getting assert at http://mxr.mozilla.org/mozilla-central/source/content/media/fmp4/MP4Reader.cpp#111 [09:43] yury does it need non-virtual window 8.1? [09:43] -->| ekr (ekr@moz-FAC44BDF.hfc.comcastbusiness.net) has joined #media [09:43] =-= Mode #media +ao ekr ekr by ChanServ [09:45] cpearce yury: we need that if we're going to get DXVA acceleration. we should do two things: [09:45] cpearce 1. provide a decoder owner so that we can get the layer manager so that we can get dxva, and [09:45] cpearce 2. not exit with failure if we can't. we can just fallback to software. [09:46] |<-- mt has left moznet (Quit: Leaving.) [09:46] cpearce yury: so to get unblocked, just comment out that block. [09:46] yury cool [09:46] cpearce yury: I'll file a bug to address those. This bug addresses (2) above. If MP4Reader::Init() can't find a decoder owner, we can just assume LAYERS_NONE. This means we won't get hardware accelerated decoding on Windows, but too bad.
Attached patch PatchSplinter Review
Make MP4Reader::Init() assume mLayersBackendType=LAYERS_NONE if it doesn't have a decoder owner. r=kinetik This ensures that if the MP4Reader fails to get a decoder owner, we don't abort the media load, but instead we will assume that we don't have an advanced layers backend, and so fallback to software decoding on Windows.
Assignee: nobody → cpearce
Status: NEW → ASSIGNED
Attachment #8339520 - Flags: review?(kinetik)
With this patch, we play the "car" MP4 test case at http://dash-mse-test.appspot.com perfectly on Windows. :)
Attachment #8339520 - Flags: review?(kinetik) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/499c81cdff30 (In reply to Chris Pearce (:cpearce) from comment #2) > With this patch, we play the "car" MP4 test case at > http://dash-mse-test.appspot.com perfectly on Windows. :) (provided we pref on the demuxer to be exposed of course, we still need to hook it up to MSE)
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: